--- a/.env
+++ b/.env
@@ -13,8 +13,7 @@ APP_SECRET=910460e0ec12cfe34f0fe5e66e360ea5
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-###< doctrine/doctrine-bundle ###
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/site
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
