--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ APP_SECRET=910460e0ec12cfe34f0fe5e66e360ea5
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/site
+###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
