--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,12 @@
         "symfony/twig-bundle": "4.1.*",
         "symfony/validator": "4.1.*",
         "symfony/web-link": "4.1.*",
-        "symfony/yaml": "4.1.*",
+        "symfony/yaml": "4.1.*"
 
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "fzaninotto/faker": "^1.8",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "4.1.*",
         "symfony/maker-bundle": "^1.0",
